--- a/index.html
+++ b/index.html
@@ -1,32 +1,7 @@
 <html> 
 <head> 
-<style>
-#time:hover{
- background-color: BLUE;
-}
-</style>
-<script type="text/javascript">
-function startTime()
-{
-var tm=new Date();
-var h=tm.getHours();
-var m=tm.getMinutes();
-var s=tm.getSeconds();
-m=checkTime(m);
-s=checkTime(s);
-document.getElementById('txt').innerHTML=h+":"+m+":"+s;
-t=setTimeout('startTime()',500);
-}
-function checkTime(i)
-{
-if (i<10)
-{
-i="0" + i;
-}
-return i;
-}
-</script> </head> 
-<body 
+</head> 
+<body>
 hELLO
 </body> 
 </html>
