--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   padding: 0;
   font-family: "montserrat",sans-serif;
 }
-
 body{
   background: #353b48;
   height: 100vh;
@@ -14,20 +13,18 @@ body{
   align-items: center;
   justify-content: center;
 }
-
 .btn{
   width: 1100px;
   height: 400px;
   background: none;
   border: 4px solid;
-  color: white;
+  color: rgb(255,128,0);
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
   font-size: 250px;
   position: relative;
 }
-
 .btn::before,.btn::after{
   content: "";
   position: absolute;
@@ -37,60 +34,20 @@ body{
   transform: skewX(50deg);
   transition: .4s linear;
 }
-
 .btn::before{
   top: -4px;
   left: 10%;
 }
-
 .btn::after{
   bottom: -4px;
   right: 10%;
 }
-
 .btn:hover::before{
   left: 80%;
 }
-
 .btn:hover::after{
   right: 80%;
 }
-.floating-text{
-  text-transform: uppercase;
-  font-size: 80px;
-  font-weight: 900;
-  letter-spacing: 6px;
-  color: #ffffff40;
-  transform: translateY(0);
-  animation: fl1 3s infinite linear;
-}
-
-.floating-text::before{
-  content: attr(data-text);
-  position: absolute;
-  color: #000;
-  clip-path: polygon(0 0,100% 0,100% 50%,0 50%);
-  animation: fl2 3s infinite linear;
-}
-
-@keyframes fl1 {
-  30%{
-    transform: translateY(10%) rotate(4deg);
-  }
-  70%{
-    transform: translateY(10%) rotate(-4deg);
-  }
-}
-
-@keyframes fl2 {
-  30%{
-  clip-path: polygon(0 0,100% 0,100% 24%,0 56%);
-  }
-  70%{
-  clip-path: polygon(0 0,100% 0,100% 56%,0 24%);
-  }
-}
-
 </style>
 <script type="text/javascript">
 function startTime()
@@ -115,6 +72,6 @@ return i;
 </script> </head> 
 <body 
 onload="startTime()"> 
-<div class="floating-text" ><button class="btn"><p id="txt"></p></button></div>
+<button class="btn"><p id="txt"></p></button>
 </body> 
 </html>
